--- a/nusissworkshops/csfday37workshop/server/src/main/resources/application.properties
+++ b/nusissworkshops/csfday37workshop/server/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.servlet.multipart.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/feeds
 spring.datasource.username=fred2
 spring.datasource.password=Password@123456
+
+
+mysql://root:iNGrgbB5txnWO8ASyWOV@containers-us-west-100.railway.app:8059/railway
