Client Side Foundation Workshop 29 Solutions

--- a/nusissworkshops/csfday39workshop/server/src/main/resources/application.properties
+++ b/nusissworkshops/csfday39workshop/server/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Redis
-REDISHOST=containers-us-west-186.railway.app
-REDISPORT=6388
+REDISHOST=containers-us-west-163.railway.app
+REDISPORT=6247
 REDISUSER=default
-REDISPASSWORD=
+REDISPASSWORD=dQqsaebqRT5wD1ZYuHM8
 
 # MongoDB
-spring.data.mongodb.url=mongodb://mongo:JXCJQ0l6MQDYE5eWUgDU@containers-us-west-18.railway.app:6599/workshop39
+spring.data.mongodb.uri=mongodb://mongo:hWhxaNBq0qBjnqnDmVn8@containers-us-west-77.railway.app:7590/workshop39?authSource=admin
 
 # Marvel API Keys
-MARVEL_API_PUBLIC_KEY=
+MARVEL_API_PUBLIC_KEY=2fdbf61612ea0dd39872acbfde89e9a3
 
-MARVEL_API_PRIVATE_KEY=
+MARVEL_API_PRIVATE_KEY=068b50c1c5079286058c70efc2328d4eb68ee19e
