Post Controller Testing Completing

--- a/csfbatch1assessment/vttp2022_csf_assessment/order-backend/src/main/resources/application.properties
+++ b/csfbatch1assessment/vttp2022_csf_assessment/order-backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://containers-us-west-100.railway.app:8059/pizzafactory
+spring.datasource.username=root
+spring.datasource.password=iNGrgbB5txnWO8ASyWOV
 
 
 # MYSQLUSER=root
