--- a/csfbatch1reassessment/server/src/main/resources/application.properties
+++ b/csfbatch1reassessment/server/src/main/resources/application.properties
@@ -7,6 +7,8 @@ REDISUSER=default
 REDISPASSWORD=U1mNPndcp5drWL1lINkU
 
 # MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/second_hand
+spring.datasource.url=jdbc:mysql://root:bkbiGLyk0OiOphtFcdye@containers-us-west-79.railway.app:6061/second_hand
 spring.datasource.username=root
 spring.datasource.password=bkbiGLyk0OiOphtFcdye
+
+
